# timeUtils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mac_generate_x64.sh  windows_generate_x64.bat
src/: CMakeLists.txt
src/submodules/: CMakeLists.txt
src/timeutils/: CMakeLists.txt  Duration.cpp  Duration.h  LogHandler.cpp  LogHandler.h  Macro.h  TimeFormat.cpp  TimeFormat.h  TimeSimulator.cpp  TimeSimulator.h  WallClock.cpp  WallClock.h  timeFunction.cpp  timeFunction.h
tests/: CMakeLists.txt  DurationTests.cpp  WallClockTests.cpp  main.cpp
